--- a/main.css
+++ b/main.css
@@ -1,8 +1,31 @@
-.page-title {
-  text-align: center;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+#title-theme-change {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
+.page-title {
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  margin: auto;
+  font-size: 20pt;
+}
+#theme-button {
+  font-family: "Poppins", sans-serif;
+  background-color: #000;
+  border: transparent 2px solid;
+  padding-left: 10px;
+  padding-right: 10px;
+  color: #fff;
+  border-radius: 20px;
+  margin-left: 50px;
+  font-size: 16pt;
+}
+
+#theme-button:hover {
+  color: #000;
+  background-color: #fff;
+}
 img {
   display: block;
   max-width: 1000px;
@@ -10,7 +33,8 @@ img {
   width: auto;
   height: auto;
 }
-.comic-wrapper {
+.comic-wrapper-light,
+.comic-wrapper-dark {
   display: flex;
   align-items: center;
   flex-direction: column;
